--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -47,7 +47,7 @@
                                 Margin="8"
                                 Text="{x:Bind VM.KeyWord, Mode=TwoWay}"
                                 PlaceholderText="Search..."
-                                QuerySubmitted="AutoSuggestBox_QuerySubmitted"
+                                QuerySubmitted="asb_QuerySubmitted"
                                 TextChanged="asb_TextChanged"
                                 SuggestionChosen="asb_SuggestionChosen"
                                 QueryIcon="Find">
