share; focus state for back

--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -185,6 +185,7 @@
                                   RelativePanel.AlignBottomWithPanel="True"
                                   RelativePanel.AlignLeftWithPanel="True"
                                   RelativePanel.AlignRightWithPanel="True"
+                                  SelectionMode="None"
                                   RefreshRequested="lv_RefreshRequested"
                                   ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
                                   ContinuumNavigationTransitionInfo.ExitElementContainer="True"
