--- a/ExViewer/Converters/Converters.xaml
+++ b/ExViewer/Converters/Converters.xaml
@@ -2,6 +2,7 @@
                         xmlns:uwp="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:local="using:ExViewer.Views">
+    <SoftwareBitmapToImageSourceConverter x:Key="SoftwareBitmapToImageSourceConverter" />
     <FormatStringConverter x:Key="StringConverter" />
     <InvertConverter x:Key="TrueToVisibleConverter">
         <ObjectToBooleanConverter>
