move about to settings; cachedgallery & galleryimageplaceolder improvment
Former-commit-id: d5e7225bce1c6765eb31e386226916044bdd2a5d [formerly 9baedb15bd9fa131b9c10970f87daf1b4be4a6be]
Former-commit-id: efab043962d83452ea8efd5dec1424940f217751

--- a/ExViewer/Settings/SettingPresenterTemplates.xaml
+++ b/ExViewer/Settings/SettingPresenterTemplates.xaml
@@ -27,4 +27,8 @@
             </ScrollViewer>
         </StackPanel>
     </DataTemplate>
+    <DataTemplate x:Name="AboutContentTemplate"
+                  x:DataType="settings:SettingInfo">
+        <controls:AboutControl />
+    </DataTemplate>
 </ResourceDictionary>
