--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -1,19 +1,11 @@
-﻿<Page x:Class="ExViewer.Views.AboutPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      mc:Ignorable="d"
-      NavigationCacheMode="Enabled">
-    <Page.Transitions>
-        <TransitionCollection>
-            <NavigationThemeTransition>
-                <CommonNavigationTransitionInfo />
-            </NavigationThemeTransition>
-        </TransitionCollection>
-    </Page.Transitions>
-    <Page.Resources>
-        <Style x:Key="AboutPageHyperLinkButtonStyle"
+﻿<UserControl x:Class="ExViewer.Controls.AboutControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d">
+    <UserControl.Resources>
+        <Style x:Key="AboutControlHyperLinkButtonStyle"
                TargetType="HyperlinkButton"
                BasedOn="{StaticResource TextBlockButtonStyle}">
             <Setter Property="Padding"
@@ -21,69 +13,51 @@
             <Setter Property="Margin"
                     Value="4" />
         </Style>
-        <Style x:Key="AboutPageSubtitleTextBlockStyle"
+        <Style x:Key="AboutControlSubtitleTextBlockStyle"
                TargetType="TextBlock"
                BasedOn="{StaticResource SubtitleTextBlockStyle}">
             <Setter Property="Margin"
                     Value="4,40,4,4" />
         </Style>
-        <Style x:Key="AboutPageBodyTextBlockStyle"
+        <Style x:Key="AboutControlBodyTextBlockStyle"
                TargetType="TextBlock"
                BasedOn="{StaticResource BodyTextBlockStyle}">
             <Setter Property="Margin"
                     Value="4" />
         </Style>
-        <Style x:Key="AboutPageBaseTextBlockStyle"
+        <Style x:Key="AboutControlBaseTextBlockStyle"
                TargetType="TextBlock"
                BasedOn="{StaticResource BaseTextBlockStyle}">
             <Setter Property="Margin"
                     Value="4" />
         </Style>
-        <Style x:Key="AboutPageSubheaderTextBlockStyle"
+        <Style x:Key="AboutControlSubheaderTextBlockStyle"
                TargetType="TextBlock"
                BasedOn="{StaticResource BaseTextBlockStyle}">
             <Setter Property="Margin"
                     Value="4,4,4,0" />
         </Style>
-    </Page.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="48" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
-            <TextBlock Text="ABOUT"
-                       x:Uid="AboutPageTitleTextBlock"
-                       Style="{StaticResource TitleTextBlockStyle}"
-                       Margin="56,0,0,0"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Left" />
-        </Border>
-        <Button Style="{StaticResource SplitButtonStyle}"
-                Click="btn_Pane_Click" />
-        <ScrollViewer Grid.Row="1"
-                      VerticalScrollBarVisibility="Auto"
-                      HorizontalScrollMode="Disabled">
-            <StackPanel Padding="8">
-                <TextBlock x:Name="tb_AppName"
-                           Margin="4"
-                           Style="{StaticResource TitleTextBlockStyle}"
-                           Text="AppName" />
-                <TextBlock x:Name="tb_AppAuthor"
-                           Text="AppAuthor"
-                           Style="{StaticResource AboutPageBaseTextBlockStyle}" />
-                <TextBlock x:Name="tb_AppVersion"
-                           Text="AppVersion"
-                           Style="{StaticResource AboutPageBaseTextBlockStyle}" />
-                <TextBlock x:Name="tb_AppDescription"
-                           Style="{StaticResource AboutPageBodyTextBlockStyle}"
-                           Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor sagittis laoreet. Proin posuere dapibus eros, ut condimentum arcu pharetra vel. Cras hendrerit ipsum sed odio pellentesque, sed scelerisque dui finibus. Fusce volutpat, odio eu volutpat mattis, enim tortor aliquam quam, sed aliquam arcu arcu sit amet velit." />
-                <TextBlock x:Uid="AboutPageLicenceTextBlock"
-                           Text="License"
-                           Style="{StaticResource AboutPageSubtitleTextBlockStyle}" />
-                <HyperlinkButton NavigateUri="http://www.gnu.org/licenses/gpl.html"
-                                 Style="{StaticResource AboutPageHyperLinkButtonStyle}">
-                    <PathIcon Data="
+    </UserControl.Resources>
+    <StackPanel>
+        <TextBlock x:Name="tb_AppName"
+                   Margin="4"
+                   Style="{StaticResource TitleTextBlockStyle}"
+                   Text="AppName" />
+        <TextBlock x:Name="tb_AppAuthor"
+                   Text="AppAuthor"
+                   Style="{StaticResource AboutControlBaseTextBlockStyle}" />
+        <TextBlock x:Name="tb_AppVersion"
+                   Text="AppVersion"
+                   Style="{StaticResource AboutControlBaseTextBlockStyle}" />
+        <TextBlock x:Name="tb_AppDescription"
+                   Style="{StaticResource AboutControlBodyTextBlockStyle}"
+                   Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor sagittis laoreet. Proin posuere dapibus eros, ut condimentum arcu pharetra vel. Cras hendrerit ipsum sed odio pellentesque, sed scelerisque dui finibus. Fusce volutpat, odio eu volutpat mattis, enim tortor aliquam quam, sed aliquam arcu arcu sit amet velit." />
+        <TextBlock x:Uid="AboutControlLicenceTextBlock"
+                   Text="License"
+                   Style="{StaticResource AboutControlSubtitleTextBlockStyle}" />
+        <HyperlinkButton NavigateUri="http://www.gnu.org/licenses/gpl.html"
+                         Style="{StaticResource AboutControlHyperLinkButtonStyle}">
+            <PathIcon Data="
 M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.5-2.2c0.3-1.2,0.9-2.3,2-2.3
 	c0.1,0,0.2,0.1,0.3,0.1l0.4-1.7c-0.1,0-0.2,0-0.3,0c-0.8,0-1.5,0.6-2,1.4l0,0C9,44.8,9,44.4,9.1,44H7.6c-0.1,0.5-0.2,1.5-0.4,2.3
 	l-0.9,3.6L8,49.9L8,49.9z M15.9,48.3c-0.5,0.2-1.1,0.2-1.7,0.2c-0.5,0-0.9-0.1-1.1-0.3c-0.1-0.2-0.2-0.5-0.2-0.7
@@ -180,51 +154,50 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
 	c1.5-0.3,3.2-0.8,4.9-1.4c1.3-0.5,2.7-1.1,4-1.7c3-1.5,6-3.3,9-5.5c1-0.7,1.9-1.5,2.8-2.2c0.8-0.7,1.6-1.4,2.4-2.1
 	c2-2,3.7-4.1,4.6-5.9C94.4,16.8,94.6,15.3,94,14.5z
 " />
-                </HyperlinkButton>
-                <TextBlock x:Uid="AboutPageDataProvidersTextBlock"
-                           Text="Data providers"
-                           Style="{StaticResource AboutPageSubtitleTextBlockStyle}" />
-                <TextBlock x:Uid="AboutPageChineseTagProviderTextBlock"
-                           Text="Chinese translation of tags"
-                           Style="{StaticResource AboutPageSubheaderTextBlockStyle}" />
-                <HyperlinkButton x:Uid="AboutPageChineseTagProviderHyperlinkButton"
-                                 Content="Mapaler / EhTagTranslator @ Github.com"
-                                 NavigateUri="https://github.com/Mapaler/EhTagTranslator"
-                                 Style="{StaticResource AboutPageHyperLinkButtonStyle}" />
-                <TextBlock x:Uid="AboutPageJapaneseTagProviderTextBlock"
-                           Text="Japanese translation of tags"
-                           Style="{StaticResource AboutPageSubheaderTextBlockStyle}" />
-                <HyperlinkButton NavigateUri="https://ehwiki.org/"
-                                 Style="{StaticResource AboutPageHyperLinkButtonStyle}">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="ms-appx:///Images/EHWiki.png"
-                               Width="50" />
-                        <TextBlock x:Uid="AboutPageEHWikiTextBlock" Text="EHWiki.org"
-                                   Style="{StaticResource AboutPageBodyTextBlockStyle}"
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Center" />
-                    </StackPanel>
-                </HyperlinkButton>
-                <TextBlock x:Uid="AboutPageOnlineContentsTextBlock"
-                           Text="Online contents"
-                           Style="{StaticResource AboutPageSubtitleTextBlockStyle}" />
-                <HyperlinkButton x:Uid="AboutPageRateHyperlinkButton"
-                                 Style="{StaticResource AboutPageHyperLinkButtonStyle}"
-                                 Content="Rate and review"
-                                 NavigateUri="ms-windows-store://review/?ProductId=9NBLGGH4V3X1" />
-                <HyperlinkButton Style="{StaticResource AboutPageHyperLinkButtonStyle}"
-                                 x:Uid="AboutPageSourceCodeHyperlinkButton"
-                                 Content="View source code at GitHub.com"
-                                 NavigateUri="https://github.com/OpportunityLiu/ExViewer" />
-                <HyperlinkButton Style="{StaticResource AboutPageHyperLinkButtonStyle}"
-                                 x:Uid="AboutPageHelpTranslateTagsHyperlinkButton"
-                                 Content="Help translate tags into Chinese"
-                                 NavigateUri="https://github.com/Mapaler/EhTagTranslator/wiki" />
-                <HyperlinkButton Style="{StaticResource AboutPageHyperLinkButtonStyle}"
-                                 x:Uid="AboutPageForumsHyperlinkButton"
-                                 Content="E-Hentai Forums"
-                                 NavigateUri="https://forums.e-hentai.org/index.php" />
+        </HyperlinkButton>
+        <TextBlock x:Uid="AboutControlDataProvidersTextBlock"
+                   Text="Data providers"
+                   Style="{StaticResource AboutControlSubtitleTextBlockStyle}" />
+        <TextBlock x:Uid="AboutControlChineseTagProviderTextBlock"
+                   Text="Chinese translation of tags"
+                   Style="{StaticResource AboutControlSubheaderTextBlockStyle}" />
+        <HyperlinkButton x:Uid="AboutControlChineseTagProviderHyperlinkButton"
+                         Content="Mapaler / EhTagTranslator @ Github.com"
+                         NavigateUri="https://github.com/Mapaler/EhTagTranslator"
+                         Style="{StaticResource AboutControlHyperLinkButtonStyle}" />
+        <TextBlock x:Uid="AboutControlJapaneseTagProviderTextBlock"
+                   Text="Japanese translation of tags"
+                   Style="{StaticResource AboutControlSubheaderTextBlockStyle}" />
+        <HyperlinkButton NavigateUri="https://ehwiki.org/"
+                         Style="{StaticResource AboutControlHyperLinkButtonStyle}">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="ms-appx:///Images/EHWiki.png"
+                       Width="50" />
+                <TextBlock x:Uid="AboutControlEHWikiTextBlock"
+                           Text="EHWiki.org"
+                           Style="{StaticResource AboutControlBodyTextBlockStyle}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center" />
             </StackPanel>
-        </ScrollViewer>
-    </Grid>
-</Page>
+        </HyperlinkButton>
+        <TextBlock x:Uid="AboutControlOnlineContentsTextBlock"
+                   Text="Online contents"
+                   Style="{StaticResource AboutControlSubtitleTextBlockStyle}" />
+        <HyperlinkButton x:Uid="AboutControlRateHyperlinkButton"
+                         Style="{StaticResource AboutControlHyperLinkButtonStyle}"
+                         Content="Rate and review"
+                         NavigateUri="ms-windows-store://review/?ProductId=9NBLGGH4V3X1" />
+        <HyperlinkButton Style="{StaticResource AboutControlHyperLinkButtonStyle}"
+                         x:Uid="AboutControlSourceCodeHyperlinkButton"
+                         Content="View source code at GitHub.com"
+                         NavigateUri="https://github.com/OpportunityLiu/ExViewer" />
+        <HyperlinkButton Style="{StaticResource AboutControlHyperLinkButtonStyle}"
+                         x:Uid="AboutControlHelpTranslateTagsHyperlinkButton"
+                         Content="Help translate tags into Chinese"
+                         NavigateUri="https://github.com/Mapaler/EhTagTranslator/wiki" />
+        <HyperlinkButton Style="{StaticResource AboutControlHyperLinkButtonStyle}"
+                         x:Uid="AboutControlForumsHyperlinkButton"
+                         Content="E-Hentai Forums"
+                         NavigateUri="https://forums.e-hentai.org/index.php" />
+    </StackPanel>
+</UserControl>
