--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -543,9 +543,12 @@
                                 <GridView.ItemTemplate>
                                     <DataTemplate xmlns:c="using:ExClient"
                                                   x:DataType="c:GalleryImage">
-                                        <Image Source="{x:Bind Thumb, Mode=OneWay}"
-                                               Width="100"
-                                               MaxHeight="180" />
+                                        <Image Width="100"
+                                               MaxHeight="200"
+                                               MinHeight="100"
+                                               Source="{x:Bind Thumb, Mode=OneWay}"
+                                               ToolTipService.Placement="Right" 
+                                               ToolTipService.ToolTip="{x:Bind PageId, Mode=OneWay}"/>
                                     </DataTemplate>
                                 </GridView.ItemTemplate>
                                 <GridView.Footer>
