--- a/ExViewer/Settings/SettingPresenterTemplates.xaml
+++ b/ExViewer/Settings/SettingPresenterTemplates.xaml
@@ -1,27 +1,27 @@
 ﻿<ResourceDictionary x:Class="ExViewer.Settings.SettingPresenterTemplates"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:settings="using:ApplicationDataManager.Settings"
+                    xmlns:a="using:ExViewer.Views"
                     xmlns:controls="using:ExViewer.Controls"
-                    xmlns:a="using:ExViewer.Views">
+                    xmlns:settings="using:ApplicationDataManager.Settings">
     <DataTemplate x:Name="CatagorySettingTemplate"
                   x:DataType="settings:SettingInfo">
         <StackPanel>
             <TextBlock Text="{Binding FriendlyName}" />
-            <controls:CategorySelector SelectedCategory="{Binding Value, Mode=TwoWay}"
-                                       HorizontalAlignment="Stretch" />
+            <controls:CategorySelector HorizontalAlignment="Stretch"
+                                       SelectedCategory="{Binding Value, Mode=TwoWay}" />
         </StackPanel>
     </DataTemplate>
     <DataTemplate x:Name="ExcludedLanguagesTemplate"
                   x:DataType="settings:SettingInfo">
         <StackPanel>
             <TextBlock Text="{Binding FriendlyName}" />
-            <ScrollViewer HorizontalScrollMode="Auto"
-                          HorizontalScrollBarVisibility="Auto"
-                          VerticalScrollBarVisibility="Disabled"
-                          VerticalScrollMode="Disabled"
+            <ScrollViewer HorizontalScrollBarVisibility="Auto"
+                          HorizontalScrollMode="Auto"
+                          IsHorizontalScrollChainingEnabled="True"
                           IsVerticalScrollChainingEnabled="True"
-                          IsHorizontalScrollChainingEnabled="True">
+                          VerticalScrollBarVisibility="Disabled"
+                          VerticalScrollMode="Disabled">
                 <controls:ExcludedLanguagesSelector x:Uid="SettingsPageExcludedLanguagesSelector"
                                                     ExcludedLanguages="{Binding Value, Mode=TwoWay}" />
             </ScrollViewer>
