--- a/ExViewer/Strings/en/Dictionary.xaml
+++ b/ExViewer/Strings/en/Dictionary.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!--en-->
-    <x:String x:Key="GuestUserNameString">Guest</x:String>
+    <!--  en  -->
+    <x:String x:Key="GuestUserNameString">
+        Guest
+    </x:String>
 </ResourceDictionary>
