--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Name="page"
-      x:Class="ExViewer.Views.ImagePage"
+﻿<Page x:Class="ExViewer.Views.ImagePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:ExViewer.Views"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:converters="using:ExViewer.Converters"
-      mc:Ignorable="d"
       xmlns:controls="using:ExViewer.Controls"
-      NavigationCacheMode="Enabled">
+      xmlns:converters="using:ExViewer.Converters"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:ExViewer.Views"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      x:Name="page"
+      NavigationCacheMode="Enabled"
+      mc:Ignorable="d">
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
@@ -30,10 +30,10 @@
         </converters:InvertConverter>
         <Storyboard x:Name="cb_top_Open">
             <ColorAnimation x:Name="cb_top_OpenAnimation"
-                            Duration="0:0:0.15"
-                            Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"
                             Storyboard.TargetName="cb_top"
-                            To="{ThemeResource SystemChromeMediumColor}">
+                            Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"
+                            To="{ThemeResource SystemChromeMediumColor}"
+                            Duration="0:0:0.15">
                 <ColorAnimation.EasingFunction>
                     <PowerEase EasingMode="EaseOut" />
                 </ColorAnimation.EasingFunction>
@@ -41,9 +41,9 @@
         </Storyboard>
         <Storyboard x:Name="cb_top_Close">
             <ColorAnimation x:Name="cb_top_CloseAnimation"
-                            Duration="0:0:0.15"
+                            Storyboard.TargetName="cb_top"
                             Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"
-                            Storyboard.TargetName="cb_top">
+                            Duration="0:0:0.15">
                 <ColorAnimation.EasingFunction>
                     <PowerEase EasingMode="EaseIn" />
                 </ColorAnimation.EasingFunction>
@@ -52,20 +52,19 @@
     </Page.Resources>
     <RelativePanel>
         <FlipView x:Name="fv"
-                  RelativePanel.AlignRightWithPanel="True"
-                  RelativePanel.AlignLeftWithPanel="True"
-                  RelativePanel.AlignBottomWithPanel="True"
-                  RelativePanel.AlignTopWithPanel="True"
+                  Background="Transparent"
                   EntranceNavigationTransitionInfo.IsTargetElement="True"
-                  SelectionChanged="fv_SelectionChanged"
-                  Background="Transparent">
+                  RelativePanel.AlignBottomWithPanel="True"
+                  RelativePanel.AlignLeftWithPanel="True"
+                  RelativePanel.AlignRightWithPanel="True"
+                  RelativePanel.AlignTopWithPanel="True"
+                  SelectionChanged="fv_SelectionChanged">
             <FlipView.ItemTemplate>
                 <DataTemplate xmlns:c="using:ExClient"
                               x:DataType="local:IImagePageImageView">
                     <Grid DoubleTapped="fvi_DoubleTapped"
                           Tapped="fvi_Tapped">
-                        <Grid.Resources>
-                        </Grid.Resources>
+                        <Grid.Resources />
                         <Grid.RowDefinitions>
                             <RowDefinition Height="{Binding Visibility, ElementName=cb_top, Converter={StaticResource VisibleToAppbarHeightConverter}}" />
                             <RowDefinition />
@@ -74,125 +73,124 @@
                                                  Grid.RowSpan="2"
                                                  FocusVisualPrimaryThickness="2,0,2,2"
                                                  Image="{x:Bind Image, Mode=OneWay}" />
-                        <ProgressBar Value="{x:Bind Image.Progress, Mode=OneWay, FallbackValue=0}"
-                                     Visibility="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}, FallbackValue=Visible}"
+                        <ProgressBar Grid.Row="1"
+                                     VerticalAlignment="Top"
                                      Foreground="{Binding Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}, FallbackValue={ThemeResource SystemControlForegroundAccentBrush}}"
                                      IsIndeterminate="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}, FallbackValue=True}"
-                                     VerticalAlignment="Top"
-                                     Grid.Row="1" />
+                                     Visibility="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}, FallbackValue=Visible}"
+                                     Value="{x:Bind Image.Progress, Mode=OneWay, FallbackValue=0}" />
                     </Grid>
                 </DataTemplate>
             </FlipView.ItemTemplate>
             <FlipView.ItemContainerStyle>
                 <Style TargetType="FlipViewItem">
-                    <Setter Property="IsTabStop"
-                            Value="False" />
+                    <Setter Property="IsTabStop" Value="False" />
                 </Style>
             </FlipView.ItemContainerStyle>
         </FlipView>
         <CommandBar x:Name="cb_top"
-                    RelativePanel.AlignLeftWithPanel="True"
-                    RelativePanel.AlignRightWithPanel="True"
                     HorizontalContentAlignment="Stretch"
-                    Opening="cb_top_Opening"
                     Closing="cb_top_Closing"
-                    IsDynamicOverflowEnabled="False">
+                    IsDynamicOverflowEnabled="False"
+                    Opening="cb_top_Opening"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True">
             <CommandBar.Content>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition />
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <Button x:Name="btn_pane"
-                            Style="{StaticResource SplitButtonStyle}"
                             Click="btn_pane_Click"
-                            XYFocusDown="{x:Bind}"/>
+                            Style="{StaticResource SplitButtonStyle}"
+                            XYFocusDown="{x:Bind}" />
                     <TextBlock x:Name="tb_Title"
-                               Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}"
+                               Grid.Column="1"
                                Style="{StaticResource GalleryTitleTextBlockStyle}"
-                               Grid.Column="1">
+                               Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}">
                         <ToolTipService.ToolTip>
                             <TextBlock Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}"
                                        TextWrapping="WrapWholeWords" />
                         </ToolTipService.ToolTip>
                     </TextBlock>
                     <TextBlock x:Name="tb_si"
-                               Text="{x:Bind fv.SelectedIndex, Mode=OneWay, Converter={StaticResource IndexToStringConverter}}"
-                               Style="{StaticResource BodyTextBlockStyle}"
                                Grid.Column="2"
-                               VerticalAlignment="Center" />
-                    <TextBlock x:Uid="ImagePageCounterSeparatorTextBlock"
-                               x:Name="tb_sep"
-                               Text="/"
+                               VerticalAlignment="Center"
                                Style="{StaticResource BodyTextBlockStyle}"
+                               Text="{x:Bind fv.SelectedIndex, Mode=OneWay, Converter={StaticResource IndexToStringConverter}}" />
+                    <TextBlock x:Name="tb_sep"
+                               x:Uid="ImagePageCounterSeparatorTextBlock"
                                Grid.Column="3"
-                               VerticalAlignment="Center" />
-                    <TextBlock x:Name="tb_rc"
-                               Text="{x:Bind VM.Gallery.RecordCount, Mode=OneWay}"
+                               VerticalAlignment="Center"
                                Style="{StaticResource BodyTextBlockStyle}"
-                               Margin="0,0,8,0"
+                               Text="/" />
+                    <TextBlock x:Name="tb_rc"
                                Grid.Column="4"
-                               VerticalAlignment="Center" />
+                               Margin="0,0,8,0"
+                               VerticalAlignment="Center"
+                               Style="{StaticResource BodyTextBlockStyle}"
+                               Text="{x:Bind VM.Gallery.RecordCount, Mode=OneWay}" />
                 </Grid>
             </CommandBar.Content>
             <CommandBar.PrimaryCommands>
-                <AppBarButton x:Uid="ImagePageFullScreenAppBarButton"
-                              x:Name="abb_fullScreen"
-                              Label="Full screen"
+                <AppBarButton x:Name="abb_fullScreen"
+                              x:Uid="ImagePageFullScreenAppBarButton"
                               Click="abb_fullScreen_Click"
-                              Icon="FullScreen"/>
+                              Icon="FullScreen"
+                              Label="Full screen" />
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
-                <AppBarButton x:Uid="ImagePageReloadAppBarButton"
-                              x:Name="abb_reload"
-                              Label="Reload"
+                <AppBarButton x:Name="abb_reload"
+                              x:Uid="ImagePageReloadAppBarButton"
                               Command="{x:Bind VM.ReloadImage, Mode=OneWay}"
-                              CommandParameter="{Binding SelectedItem.Image, ElementName=fv, Mode=OneWay}" />
-                <AppBarButton x:Uid="ImagePageLoadOriginalAppBarButton"
-                              x:Name="abb_LoadOriginal"
-                              Label="Load original image"
+                              CommandParameter="{Binding SelectedItem.Image, ElementName=fv, Mode=OneWay}"
+                              Label="Reload" />
+                <AppBarButton x:Name="abb_LoadOriginal"
+                              x:Uid="ImagePageLoadOriginalAppBarButton"
                               Command="{x:Bind VM.LoadOriginal, Mode=OneWay}"
-                              CommandParameter="{Binding SelectedItem.Image, ElementName=fv, Mode=OneWay}" />
-                <AppBarButton x:Uid="ImagePageShareAppBarButton"
-                              x:Name="abb_Share"
-                              Label="Share"
+                              CommandParameter="{Binding SelectedItem.Image, ElementName=fv, Mode=OneWay}"
+                              Label="Load original image" />
+                <AppBarButton x:Name="abb_Share"
+                              x:Uid="ImagePageShareAppBarButton"
                               Command="{x:Bind VM.Share, Mode=OneWay}"
-                              CommandParameter="{Binding SelectedItem.Image, ElementName=fv, Mode=OneWay}" />
+                              CommandParameter="{Binding SelectedItem.Image, ElementName=fv, Mode=OneWay}"
+                              Label="Share" />
                 <AppBarSeparator />
-                <AppBarButton x:Uid="ImagePageImageInfoAppBarButton"
-                              x:Name="abb_Info"
+                <AppBarButton x:Name="abb_Info"
+                              x:Uid="ImagePageImageInfoAppBarButton"
                               Label="Image infomation">
                     <AppBarButton.Flyout>
-                        <Flyout Placement="Bottom"
-                                Opening="Flyout_Opening"
+                        <Flyout Opening="Flyout_Opening"
+                                Placement="Bottom"
                                 ScrollViewer.VerticalScrollMode="Disabled">
                             <StackPanel>
                                 <TextBlock x:Name="tb_Info"
                                            Style="{StaticResource BodyTextBlockStyle}"
                                            Text="{x:Bind VM.CurrentInfo, Mode=OneWay}" />
-                                <Button x:Uid="ImagePageOpenInExplorerButton"
-                                        x:Name="btn_OpenInExplorer"
-                                        Content="Open in explorer"
-                                        Visibility="{x:Bind VM.CurrentInfo, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}"
-                                        Style="{StaticResource TextBlockButtonStyle}"
-                                        Command="{x:Bind VM.OpenInExplorer, Mode=OneWay}"
-                                        BorderThickness="0"
+                                <Button x:Name="btn_OpenInExplorer"
+                                        x:Uid="ImagePageOpenInExplorerButton"
+                                        Margin="0,4,0,0"
                                         Padding="0"
-                                        Margin="0,4,0,0" />
+                                        BorderThickness="0"
+                                        Command="{x:Bind VM.OpenInExplorer, Mode=OneWay}"
+                                        Content="Open in explorer"
+                                        Style="{StaticResource TextBlockButtonStyle}"
+                                        Visibility="{x:Bind VM.CurrentInfo, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
                             </StackPanel>
                             <Flyout.FlyoutPresenterStyle>
                                 <Style TargetType="FlyoutPresenter">
                                     <Setter Property="Template">
                                         <Setter.Value>
                                             <ControlTemplate TargetType="FlyoutPresenter">
-                                                <Border Padding="{TemplateBinding Padding}"
-                                                        BorderBrush="{TemplateBinding BorderBrush}"
-                                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                                <Border Margin="{TemplateBinding Margin}"
+                                                        Padding="{TemplateBinding Padding}"
                                                         Background="{TemplateBinding Background}"
-                                                        Margin="{TemplateBinding Margin}">
+                                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                                        BorderThickness="{TemplateBinding BorderThickness}">
                                                     <ContentPresenter Content="{TemplateBinding Content}"
                                                                       Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}" />
                                                 </Border>
@@ -205,10 +203,10 @@
                     </AppBarButton.Flyout>
                 </AppBarButton>
                 <AppBarSeparator />
-                <AppBarButton x:Uid="ImagePageHelpAppBarButton"
-                              x:Name="abb_Help"
-                              Label="Tips for keyboard users"
-                              Click="abb_Help_Click" />
+                <AppBarButton x:Name="abb_Help"
+                              x:Uid="ImagePageHelpAppBarButton"
+                              Click="abb_Help_Click"
+                              Label="Tips for keyboard users" />
             </CommandBar.SecondaryCommands>
         </CommandBar>
     </RelativePanel>
