--- a/ExViewer/Views/SplashControl.xaml
+++ b/ExViewer/Views/SplashControl.xaml
@@ -1,23 +1,23 @@
-﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl x:Class="ExViewer.Views.SplashControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="ExViewer.Views.SplashControl"
              Loading="splash_Loading"
              SizeChanged="splash_SizeChanged">
     <UserControl.Resources>
         <Storyboard x:Name="ShowPic"
                     Completed="ShowPic_Completed">
-            <DoubleAnimation Storyboard.TargetProperty="(UIElement.Opacity)"
-                             Storyboard.TargetName="img_pic"
-                             Duration="0:0:0.7"
-                             To="1">
+            <DoubleAnimation Storyboard.TargetName="img_pic"
+                             Storyboard.TargetProperty="(UIElement.Opacity)"
+                             To="1"
+                             Duration="0:0:0.7">
                 <DoubleAnimation.EasingFunction>
                     <CircleEase EasingMode="EaseIn" />
                 </DoubleAnimation.EasingFunction>
             </DoubleAnimation>
-            <DoubleAnimation Duration="0:0:2"
-                             To="4"
+            <DoubleAnimation Storyboard.TargetName="img_splash"
                              Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)"
-                             Storyboard.TargetName="img_splash">
+                             To="4"
+                             Duration="0:0:2">
                 <DoubleAnimation.EasingFunction>
                     <CircleEase EasingMode="EaseIn" />
                 </DoubleAnimation.EasingFunction>
@@ -30,27 +30,27 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Image x:Name="img_splash"
+               Grid.RowSpan="2"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
                RenderTransformOrigin="0.5,0.5"
-               Source="ms-appx:///Assets/SplashScreen.png"
-               Grid.RowSpan="2">
+               Source="ms-appx:///Assets/SplashScreen.png">
             <Image.RenderTransform>
                 <CompositeTransform />
             </Image.RenderTransform>
         </Image>
         <Image x:Name="img_pic"
-               Opacity="0"
+               Grid.RowSpan="2"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
                ImageFailed="img_pic_ImageFailed"
                ImageOpened="img_pic_ImageOpened"
-               Grid.RowSpan="2" />
+               Opacity="0" />
         <ProgressRing x:Name="pr"
-                      x:DeferLoadStrategy="Lazy" 
                       Grid.Row="1"
                       Width="40"
                       Height="40"
-                      IsActive="True"/>
+                      x:DeferLoadStrategy="Lazy"
+                      IsActive="True" />
     </Grid>
 </UserControl>
