--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -39,8 +39,9 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Button Style="{StaticResource SplitButtonStyle}"
-                        Click="btn_pane_Click" />
+                <Button x:Name="btnPane"
+                        Style="{StaticResource SplitButtonStyle}"
+                        Click="btnPane_Click" />
                 <AutoSuggestBox x:Uid="SearchPageAutoSuggestBox"
                                 x:Name="asb"
                                 Grid.Column="1"
