--- a/ExViewer/Settings/SettingPresenterTemplates.xaml
+++ b/ExViewer/Settings/SettingPresenterTemplates.xaml
@@ -12,6 +12,13 @@
                                        SelectedCategory="{Binding Value, Mode=TwoWay}" />
         </StackPanel>
     </DataTemplate>
+    <DataTemplate x:Name="ExcludedTagNamespacesTemplate"
+                  x:DataType="settings:SettingInfo">
+        <StackPanel>
+            <TextBlock Text="{Binding FriendlyName}" />
+            <controls:ExcludedTagNamespacesSelector ExcludedTagNamespaces="{Binding Value, Mode=TwoWay}" />
+        </StackPanel>
+    </DataTemplate>
     <DataTemplate x:Name="ExcludedLanguagesTemplate"
                   x:DataType="settings:SettingInfo">
         <StackPanel>
